[BUGFIX] reduce font size for hexagons on mobile devices

--- a/assets/hexagon.scss
+++ b/assets/hexagon.scss
@@ -58,6 +58,9 @@
   transition: var(--hex-transition);
   width: var(--hex-width);
   opacity:0.8;
+  @media only screen and (max-width: 768px) {
+    font-size:12px;
+  }
   .showText{
     display: none;
   }
